@@ -29,7 +29,8 @@ inlead,    0x5BB650,	0x5CA190,	0x5BB360,	"Unit_is_visible_to_civ",			"char (__fa
 define,    0x5EA6C0,	0x5F9F10,	0x5EA5F0,	"Tile_has_city",				"char (__fastcall *) (Tile * this)"
 define,    0x5BE5B0,	0x5CD180,	0x5BE2C0,	"Unit_get_max_hp",				"int (__fastcall *) (Unit * this)"
 define,    0x5E4EF0,	0x5F4750,	0x5E4E20,	"UnitType_has_ability",				"bool (__fastcall *) (UnitType * this, int edx, enum UnitTypeAbilities a)"
-define,    0x5BE470,	0x5CD030,	0x5BE180,	"Unit_get_max_move_points",			"int (__fastcall *) (Unit * this)"
+define,	   0x5CDDF0,	0x5DCEB0,	0x5CDD10,	"get_max_move_points",				"int (__cdecl *) (UnitType * unit_type, int civ_id)"
+inlead,    0x5BE470,	0x5CD030,	0x5BE180,	"Unit_get_max_move_points",			"int (__fastcall *) (Unit * this)"
 define,    0x60B370,	0x625850,	0x60B290,	"Button_set_tooltip",				"int (__fastcall *) (Button * this, int edx, char * str)"
 define,    0x5FC420,	0x60FC10,	0x5FC300,	"PCX_Image_construct",				"PCX_Image * (__fastcall *) (PCX_Image * this)"
 define,    0x5FC820,	0x610360,	0x5FC700,	"PCX_Image_read_file",				"int (__fastcall *) (PCX_Image * this, int edx, char * file_path, PCX_Color_Table * out_color_table, int ct_start, int ct_count, unsigned flags)"
