@@ -246,6 +246,9 @@ ai_worker_requirement_percent = 150
 ; the nearest city belonging to the target of the alliance and divides by that distance. For unknown reasons, in rare cases that distance may be zero,
 ; which crashes the program due to division by zero. The mod fixes this issue by inserting a bit of logic after the distance is computed to check if
 ; it's zero and, if so, set it to one.
+;   EMPTY ARMY MOVEMENT -- Empty armies have one less than a full move's worth of movement points regardless of how many moves their unit type has set
+; in the editor. Under the standard game rules, this means they can only move two tiles along roads. The cause is a small mistake in the logic that
+; attempts to find the slowest member among units in the army. The mod fixes this bug by reimplementing the max movement point calculation for armies.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -258,6 +261,7 @@ patch_maintenance_persisting_for_obsolete_buildings = true
 patch_barbarian_diagonal_bug = true
 patch_disease_stopping_tech_flag_bug = false
 patch_division_by_zero_in_ai_alliance_eval = true
+patch_empty_army_movement = true
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
